--- a/app/src/components/header/style.css
+++ b/app/src/components/header/style.css
@@ -1,7 +1,8 @@
 .header {
     margin: 0;
     padding: 20px;
-    text-align: center;
     font-family: 'Rubik', 'Helvetica', 'Arial', sans-serif;
     background: lightblue;
+    text-decoration: none;
+    color: #0b0b0b;
 }
