--- a/app/src/components/rateTable/style.css
+++ b/app/src/components/rateTable/style.css
@@ -1,9 +1,13 @@
 .table {
-    text-align: left;
-    width: 350px;
-    margin: 0 auto;
+    width: 100%;
+    border-collapse: collapse;
 }
 
 .table td, .table th {
     padding: 5px;
+    text-align: left;
+}
+
+.table tbody tr:nth-of-type(odd) {
+    background: #cecece;
 }
