--- a/app/src/global.css
+++ b/app/src/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800i');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800');
 
 * {
   box-sizing: border-box;
